package challangeOOPFinal_MH.tax;

public interface TaxProject {
    public void calcppn();
}
