package challangeOOPFinal_MH.hr;

public enum EmployeeType {
    PERMANENT,
    CONTRACT,
    MAGANG,
    FREELANCE
}
