package challangeOOPFinal_MH.hr;

public interface POService {
    public double totalPO();
    //public void totalPO();


}
